export const snapshot = {};

snapshot[`S01 QSHS straight 10m horizontal baseline 1`] = `
{
  assumptions: [
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 4,
        num_slats: 24,
        panel_width_mm: 2500,
        slat_cut_mm: 2485,
      },
    },
  },
  lines: [
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 8,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 3,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "8 pieces at 1767mm",
      quantity: 3,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 7.1,
      notes: "Screening screws",
      quantity: 5,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 8,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 10.52,
      notes: "184 spacers total",
      quantity: 4,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 5,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 2,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 2485mm cuts from 6100mm stock",
      quantity: 48,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 4,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 19.38,
    gst: 1.76,
    subtotal: 17.62,
  },
  warnings: [],
}
`;

snapshot[`S02 QSHS 90mm slats 1`] = `
{
  assumptions: [
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-6100-S90-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1776,
        num_panels: 4,
        num_slats: 18,
        panel_width_mm: 2000,
        slat_cut_mm: 1985,
      },
    },
  },
  lines: [
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 8,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 3,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "8 pieces at 1773mm",
      quantity: 3,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "18 slats/panel, 1985mm cuts from 6100mm stock",
      quantity: 24,
      sku: "QS-6100-S90-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 5.68,
      notes: "Screening screws",
      quantity: 4,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 8,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 7.89,
      notes: "136 spacers total",
      quantity: 3,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 5,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1770mm",
      quantity: 2,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 4,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 14.93,
    gst: 1.36,
    subtotal: 13.57,
  },
  warnings: [],
}
`;

snapshot[`S03 QSHS base_plate mounting 1`] = `
{
  assumptions: [
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-BP-SET-B.",
    "No local price found for SKU XP-CSRC-B.",
    "No local price found for SKU XP-DC-2P-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 3,
        num_slats: 24,
        panel_width_mm: 2000,
        slat_cut_mm: 1985,
      },
    },
  },
  lines: [
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 2,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "6 pieces at 1767mm",
      quantity: 2,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 5.68,
      notes: "Screening screws",
      quantity: 4,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 6,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 7.89,
      notes: "138 spacers total",
      quantity: 3,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "fixings",
      lineTotal: 27.08,
      notes: "Concrete fixing kit, one 4-pack per base-plated post",
      quantity: 4,
      sku: "S-120ROD-4PK",
      unit: "pack",
      unitPrice: 6.77,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 4,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 1,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 1985mm cuts from 6100mm stock",
      quantity: 24,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "Base plate sets",
      quantity: 4,
      sku: "XP-BP-SET-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 3,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "Domical covers",
      quantity: 4,
      sku: "XP-DC-2P-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 44.72,
    gst: 4.07,
    subtotal: 40.65,
  },
  warnings: [],
}
`;

snapshot[`S04 QSHS core_drill mounting 1`] = `
{
  assumptions: [
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-CSRC-B.",
    "No local price found for SKU XP-DR-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 3,
        num_slats: 24,
        panel_width_mm: 2000,
        slat_cut_mm: 1985,
      },
    },
  },
  lines: [
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 2,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "6 pieces at 1767mm",
      quantity: 2,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 5.68,
      notes: "Screening screws",
      quantity: 4,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 6,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 7.89,
      notes: "138 spacers total",
      quantity: 3,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 4,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 1,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 1985mm cuts from 6100mm stock",
      quantity: 24,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 3,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "Dress rings",
      quantity: 4,
      sku: "XP-DR-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 14.93,
    gst: 1.36,
    subtotal: 13.57,
  },
  warnings: [],
}
`;

snapshot[`S05 QSHS wall terminations both ends 1`] = `
{
  assumptions: [
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-F-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 3,
        num_slats: 24,
        panel_width_mm: 2000,
        slat_cut_mm: 1985,
      },
    },
  },
  lines: [
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 3,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "6 wall termination pieces",
      quantity: 2,
      sku: "QS-5800-F-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 5.68,
      notes: "Screening screws",
      quantity: 4,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "spacers",
      lineTotal: 7.89,
      notes: "138 spacers total",
      quantity: 3,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 2,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 1,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 1985mm cuts from 6100mm stock",
      quantity: 24,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 3,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 6.36,
      notes: "F-section fixing screws",
      quantity: 1,
      sku: "XP-SCREWS-B",
      unit: "pack",
      unitPrice: 6.36,
    },
  ],
  totals: {
    grandTotal: 21.92,
    gst: 1.99,
    subtotal: 19.93,
  },
  warnings: [],
}
`;

snapshot[`S06 QSHS custom corner 110deg 1`] = `
{
  assumptions: [
    "No local price found for SKU CUSTOM-ANGLE-CORNER.",
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 3,
        num_slats: 24,
        panel_width_mm: 2000,
        slat_cut_mm: 1985,
      },
    },
  },
  lines: [
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Custom angle (110 degrees) at left corner on s1 - verify components with supplier before ordering.",
      quantity: 1,
      sku: "CUSTOM-ANGLE-CORNER",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 6,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 2,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "6 pieces at 1767mm",
      quantity: 2,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 5.68,
      notes: "Screening screws",
      quantity: 4,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 6,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 7.89,
      notes: "138 spacers total",
      quantity: 3,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 4,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 1,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 1985mm cuts from 6100mm stock",
      quantity: 24,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 3,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 14.93,
    gst: 1.36,
    subtotal: 13.57,
  },
  warnings: [
    "Custom angle (110 degrees) at left corner on s1 - verify components with supplier before ordering.",
  ],
}
`;

snapshot[`S07 QSHS economy slats pack-of-96 1`] = `
{
  assumptions: [
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 4,
        num_slats: 24,
        panel_width_mm: 2500,
        slat_cut_mm: 2485,
      },
    },
  },
  lines: [
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 8,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 3,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "8 pieces at 1767mm",
      quantity: 3,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 7.1,
      notes: "Screening screws",
      quantity: 5,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 8,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 10.52,
      notes: "184 spacers total",
      quantity: 4,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 5,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 2,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 3153.6,
      notes: "24 slats/panel, 2485mm cuts from 6500mm stock; Sold in packs of 96 only. Buying 96 economy slats but only need 48. Switch to Standard slats?",
      quantity: 1,
      sku: "XP-6500-E65-B",
      unit: "pack",
      unitPrice: 3153.6,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 4,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 3488.34,
    gst: 317.12,
    subtotal: 3171.22,
  },
  warnings: [],
}
`;

snapshot[`S08 QSHS alumawood KWI 1`] = `
{
  assumptions: [
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-CSRC-MN.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 3,
        num_slats: 24,
        panel_width_mm: 2000,
        slat_cut_mm: 1985,
      },
    },
  },
  lines: [
    {
      category: "posts_and_mounting",
      lineTotal: 203.64,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 4,
      sku: "AW-2400-FP-KWI",
      unit: "each",
      unitPrice: 50.91,
    },
    {
      category: "frames_and_covers",
      lineTotal: 51.59,
      notes: "1 CSR/panel at 1764mm",
      quantity: 1,
      sku: "AW-5800-CSR-KWI",
      unit: "length",
      unitPrice: 51.59,
    },
    {
      category: "screening",
      lineTotal: 1817.64,
      notes: "24 slats/panel, 1985mm cuts from 5800mm stock",
      quantity: 36,
      sku: "AW-5800-S65-KWI",
      unit: "length",
      unitPrice: 50.49,
    },
    {
      category: "frames_and_covers",
      lineTotal: 39.64,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 2,
      sku: "AWQS-5800-CFC-KWI",
      unit: "length",
      unitPrice: 19.82,
    },
    {
      category: "frames_and_covers",
      lineTotal: 70.42,
      notes: "6 pieces at 1767mm",
      quantity: 2,
      sku: "AWQS-5800-SF-KWI",
      unit: "length",
      unitPrice: 35.21,
    },
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 6,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 5.68,
      notes: "Screening screws",
      quantity: 4,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 6,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 7.89,
      notes: "138 spacers total",
      quantity: 3,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 3,
      sku: "XP-CSRC-MN",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 2416.15,
    gst: 219.65,
    subtotal: 2196.5,
  },
  warnings: [],
}
`;

snapshot[`S09 QSHS multi-panel split with CSR 1`] = `
{
  assumptions: [
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 2066,
        num_panels: 3,
        num_slats: 28,
        panel_width_mm: 2000,
        slat_cut_mm: 1985,
      },
    },
  },
  lines: [
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 6,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 3,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "6 pieces at 2063mm",
      quantity: 3,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 5.68,
      notes: "Screening screws",
      quantity: 4,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 6,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 10.52,
      notes: "162 spacers total",
      quantity: 4,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 4,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 2060mm",
      quantity: 2,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "28 slats/panel, 1985mm cuts from 6100mm stock",
      quantity: 28,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 3,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 17.82,
    gst: 1.62,
    subtotal: 16.2,
  },
  warnings: [],
}
`;

snapshot[`S10 QSHS louvre treatment 65mm 1`] = `
{
  assumptions: [
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 3,
        num_slats: 24,
        panel_width_mm: 2000,
        slat_cut_mm: 1985,
      },
    },
  },
  lines: [
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 6,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 2,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "6 pieces at 1767mm",
      quantity: 2,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "automation",
      lineTotal: 318.96,
      notes: "Louvre installation brackets",
      quantity: 72,
      sku: "QS-LB-B",
      unit: "pack",
      unitPrice: 4.43,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 1.42,
      notes: "Screening screws",
      quantity: 1,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 6,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 7.89,
      notes: "138 spacers total",
      quantity: 3,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 4,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 1,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 1985mm cuts from 6100mm stock",
      quantity: 24,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 3,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 361.1,
    gst: 32.83,
    subtotal: 328.27,
  },
  warnings: [],
}
`;

snapshot[`S11 VS vertical run 1`] = `
{
  assumptions: [
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5000-HORIZ-B.",
    "No local price found for SKU QS-5800-F-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-6100-S65-B.",
  ],
  computed: {
    r1: {
      s1: {
        num_panels: 3,
        num_vertical_slats: 23,
        panel_width_mm: 2000,
        rail_cut_mm: 2000,
        slat_cut_mm: 1800,
      },
    },
  },
  lines: [
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 6,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Top/bottom U-channel rails, 2000mm cuts from 5000mm stock",
      quantity: 3,
      sku: "QS-5000-HORIZ-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "2 vertical side F-sections/panel, 1800mm cuts from 5800mm stock",
      quantity: 2,
      sku: "QS-5800-F-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "QS-SF inserts inside top/bottom rails, 2000mm cuts from 5800mm stock",
      quantity: 3,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 2.84,
      notes: "Vertical slat fixing screws",
      quantity: 2,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 4,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "23 vertical slats/panel, 1800mm cuts from 6100mm stock",
      quantity: 23,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 3.12,
    gst: 0.28,
    subtotal: 2.84,
  },
  warnings: [],
}
`;

snapshot[`S12 BAYG panel 1`] = `
{
  assumptions: [
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU QS-SPACER-09MM.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 2,
        num_slats: 24,
        panel_width_mm: 2400,
        slat_cut_mm: 2385,
      },
    },
  },
  lines: [
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 2,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "4 pieces at 1767mm",
      quantity: 2,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 4.26,
      notes: "Screening screws",
      quantity: 3,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 4,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 0,
      notes: "23 gaps x 2 ends x 2 panel(s)",
      quantity: 92,
      sku: "QS-SPACER-09MM",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 1,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 2385mm cuts from 6100mm stock",
      quantity: 24,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 2,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 4.69,
    gst: 0.43,
    subtotal: 4.26,
  },
  warnings: [],
}
`;

snapshot[`S13 single swing gate 1`] = `
{
  assumptions: [
    "No local price found for SKU AR-SCR-BR-50PK.",
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU QSG-4800-RAIL65-B.",
    "No local price found for SKU QSG-JOINER65-4PK.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      g1: {
        gate_build: "qsg_hinged_horizontal",
        gate_clearance_mm: 33,
        gate_height_mm: 1800,
        gate_leaf_count: 1,
        gate_leaf_width_mm: 967,
        gate_movement: "single_swing",
        gate_opening_width_mm: 1000,
      },
      s1: {
        actual_height_mm: 1770,
        num_panels: 1,
        num_slats: 24,
        panel_width_mm: 2000,
        slat_cut_mm: 1985,
      },
    },
  },
  lines: [
    {
      category: "fasteners_and_screws",
      lineTotal: 0,
      notes: "QSG rail screws for top and bottom rails",
      quantity: 1,
      sku: "AR-SCR-BR-50PK",
      unit: "pack",
      unitPrice: 0,
    },
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 3,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "gate_hardware",
      lineTotal: 66.07,
      notes: "Selected latch / lock hardware",
      quantity: 1,
      sku: "LL-DL-KA",
      unit: "each",
      unitPrice: 66.07,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 1,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "2 pieces at 1767mm",
      quantity: 1,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 4.26,
      notes: "Screening screws; 16mm wafer screws for fixing slats to gate rails/side frames",
      quantity: 3,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 2,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 5.26,
      notes: "46 spacers total; 21 gaps/leaf, one spacer at each end of each gap",
      quantity: 2,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 8.03,
      notes: "Gate screw cover, 1800mm cuts from 4200mm stock",
      quantity: 1,
      sku: "QSG-4200-COVER-B",
      unit: "length",
      unitPrice: 8.03,
    },
    {
      category: "gate_components",
      lineTotal: 90.04,
      notes: "2 QSG side-frame pieces, 1800mm cuts from 4200mm stock",
      quantity: 1,
      sku: "QSG-4200-GSF50-B",
      unit: "length",
      unitPrice: 90.04,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 15.7,
      notes: "Gate infill for gate frame void, 887mm cuts from 4800mm stock",
      quantity: 1,
      sku: "QSG-4800-INF-B",
      unit: "length",
      unitPrice: 15.7,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "Top/bottom QSG gate rails, 887mm cuts from 4800mm stock",
      quantity: 1,
      sku: "QSG-4800-RAIL65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "caps_and_plugs",
      lineTotal: 10.92,
      notes: "Gate top caps for 50mm x 50mm side frame, 4 per leaf",
      quantity: 4,
      sku: "QSG-GFC-50X50-B",
      unit: "each",
      unitPrice: 2.73,
    },
    {
      category: "gate_hardware",
      lineTotal: 0,
      notes: "65mm joiner blocks for QSG gate rails",
      quantity: 1,
      sku: "QSG-JOINER65-4PK",
      unit: "pack",
      unitPrice: 0,
    },
    {
      category: "gate_hardware",
      lineTotal: 39.75,
      notes: "Selected hinge hardware",
      quantity: 1,
      sku: "TC-H-AT-HD-B",
      unit: "each",
      unitPrice: 39.75,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 2,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 1,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 1985mm cuts from 6100mm stock; 22 gate blades/leaf, 881mm cuts from 6100mm stock",
      quantity: 12,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 1,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 264.03,
    gst: 24,
    subtotal: 240.03,
  },
  warnings: [],
}
`;

snapshot[`S14 double swing gate 1`] = `
{
  assumptions: [
    "No local price found for SKU AR-SCR-BR-50PK.",
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU QSG-4800-RAIL65-B.",
    "No local price found for SKU QSG-JOINER65-4PK.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      g1: {
        gate_build: "qsg_hinged_horizontal",
        gate_clearance_mm: 56,
        gate_height_mm: 1800,
        gate_leaf_count: 2,
        gate_leaf_width_mm: 972,
        gate_movement: "double_swing",
        gate_opening_width_mm: 2000,
      },
      s1: {
        actual_height_mm: 1770,
        num_panels: 1,
        num_slats: 24,
        panel_width_mm: 2000,
        slat_cut_mm: 1985,
      },
    },
  },
  lines: [
    {
      category: "fasteners_and_screws",
      lineTotal: 0,
      notes: "QSG rail screws for top and bottom rails",
      quantity: 1,
      sku: "AR-SCR-BR-50PK",
      unit: "pack",
      unitPrice: 0,
    },
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 3,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "gate_hardware",
      lineTotal: 66.07,
      notes: "Selected latch / lock hardware",
      quantity: 1,
      sku: "LL-DL-KA",
      unit: "each",
      unitPrice: 66.07,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 1,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "2 pieces at 1767mm",
      quantity: 1,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 5.68,
      notes: "Screening screws; 16mm wafer screws for fixing slats to gate rails/side frames",
      quantity: 4,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 2,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 7.89,
      notes: "46 spacers total; 21 gaps/leaf, one spacer at each end of each gap",
      quantity: 3,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 16.06,
      notes: "Gate screw cover, 1800mm cuts from 4200mm stock",
      quantity: 2,
      sku: "QSG-4200-COVER-B",
      unit: "length",
      unitPrice: 8.03,
    },
    {
      category: "gate_components",
      lineTotal: 180.08,
      notes: "4 QSG side-frame pieces, 1800mm cuts from 4200mm stock",
      quantity: 2,
      sku: "QSG-4200-GSF50-B",
      unit: "length",
      unitPrice: 90.04,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 15.7,
      notes: "Gate infill for gate frame void, 892mm cuts from 4800mm stock",
      quantity: 1,
      sku: "QSG-4800-INF-B",
      unit: "length",
      unitPrice: 15.7,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "Top/bottom QSG gate rails, 892mm cuts from 4800mm stock",
      quantity: 1,
      sku: "QSG-4800-RAIL65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "caps_and_plugs",
      lineTotal: 21.84,
      notes: "Gate top caps for 50mm x 50mm side frame, 4 per leaf",
      quantity: 8,
      sku: "QSG-GFC-50X50-B",
      unit: "each",
      unitPrice: 2.73,
    },
    {
      category: "gate_hardware",
      lineTotal: 0,
      notes: "65mm joiner blocks for QSG gate rails",
      quantity: 2,
      sku: "QSG-JOINER65-4PK",
      unit: "pack",
      unitPrice: 0,
    },
    {
      category: "gate_hardware",
      lineTotal: 3.95,
      notes: "Selected drop bolt",
      quantity: 1,
      sku: "SS-0300DB-B",
      unit: "each",
      unitPrice: 3.95,
    },
    {
      category: "gate_hardware",
      lineTotal: 79.5,
      notes: "Selected hinge hardware",
      quantity: 2,
      sku: "TC-H-AT-HD-B",
      unit: "each",
      unitPrice: 39.75,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 2,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 1,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 1985mm cuts from 6100mm stock; 22 gate blades/leaf, 886mm cuts from 6100mm stock",
      quantity: 16,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 1,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 436.45,
    gst: 39.68,
    subtotal: 396.77,
  },
  warnings: [],
}
`;

snapshot[`S15 sliding gate with automation 1`] = `
{
  assumptions: [
    "No local price found for SKU AR-SCR-BR-50PK.",
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU QSG-JOINER65-4PK.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-BTP-MN.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      g1: {
        gate_build: "qsg_hinged_horizontal",
        gate_clearance_mm: 0,
        gate_height_mm: 1800,
        gate_leaf_count: 1,
        gate_leaf_width_mm: 4000,
        gate_movement: "sliding",
        gate_opening_width_mm: 4000,
      },
      s1: {
        actual_height_mm: 1770,
        num_panels: 1,
        num_slats: 24,
        panel_width_mm: 2000,
        slat_cut_mm: 1985,
      },
    },
  },
  lines: [
    {
      category: "fasteners_and_screws",
      lineTotal: 0,
      notes: "QSG rail screws for sliding top and bottom rails",
      quantity: 1,
      sku: "AR-SCR-BR-50PK",
      unit: "pack",
      unitPrice: 0,
    },
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 3,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 1,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "2 pieces at 1767mm",
      quantity: 1,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 4.26,
      notes: "Screening screws; 16mm wafer screws for fixing slats to sliding gate rails/side frames",
      quantity: 3,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 2,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 5.26,
      notes: "46 spacers total; 20 gaps, one spacer at each end of each gap",
      quantity: 2,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 8.03,
      notes: "Gate screw cover, 1769mm cuts from 4200mm stock",
      quantity: 1,
      sku: "QSG-4200-COVER-B",
      unit: "length",
      unitPrice: 8.03,
    },
    {
      category: "gate_components",
      lineTotal: 90.04,
      notes: "2 QSG sliding side-frame pieces, 1769mm cuts from 4200mm stock",
      quantity: 1,
      sku: "QSG-4200-GSF50-B",
      unit: "length",
      unitPrice: 90.04,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 31.4,
      notes: "Gate infill for side-frame void, 3920mm cuts from 4800mm stock",
      quantity: 2,
      sku: "QSG-4800-INF-B",
      unit: "length",
      unitPrice: 15.7,
    },
    {
      category: "caps_and_plugs",
      lineTotal: 5.46,
      notes: "Gate top caps for the two sliding gate side frames",
      quantity: 2,
      sku: "QSG-GFC-50X50-B",
      unit: "each",
      unitPrice: 2.73,
    },
    {
      category: "gate_hardware",
      lineTotal: 0,
      notes: "65mm joiner blocks for sliding gate rails",
      quantity: 1,
      sku: "QSG-JOINER65-4PK",
      unit: "pack",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 147.48,
      notes: "Sliding gate bottom rail, 3920mm cut from 6100mm stock",
      quantity: 1,
      sku: "QSG-S-6100-BR-B",
      unit: "length",
      unitPrice: 147.48,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 147.48,
      notes: "Sliding gate top rail, 3920mm cut from 6100mm stock",
      quantity: 1,
      sku: "QSG-S-6100-TR65-B",
      unit: "length",
      unitPrice: 147.48,
    },
    {
      category: "sliding_gate_running_gear",
      lineTotal: 43.06,
      notes: "Sliding gate wheels",
      quantity: 2,
      sku: "QSG-S-WHEEL",
      unit: "each",
      unitPrice: 21.53,
    },
    {
      category: "sliding_gate_running_gear",
      lineTotal: 6,
      notes: "Sliding gate wheel clamping set",
      quantity: 1,
      sku: "QSG-S-WHEEL-CS-2PK",
      unit: "pack",
      unitPrice: 6,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 2,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm; 1 centre support rail(s) for sliding gate over 3000mm",
      quantity: 2,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 1985mm cuts from 6100mm stock; 21 gate blades, 3914mm cuts from 6100mm stock",
      quantity: 29,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Top and bottom plates for sliding gate centre support rails",
      quantity: 2,
      sku: "XP-BTP-MN",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps; Centre support rail cap",
      quantity: 2,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "sliding_gate_running_gear",
      lineTotal: 100.88,
      notes: "Sliding track for approx. 8000mm travel length",
      quantity: 2,
      sku: "XPSG-6000-TRACK-ST",
      unit: "length",
      unitPrice: 50.44,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 60.48,
      notes: "Track anchor pins",
      quantity: 84,
      sku: "XPSG-ANCHOR",
      unit: "each",
      unitPrice: 0.72,
    },
    {
      category: "sliding_gate_running_gear",
      lineTotal: 13.88,
      notes: "Sliding gate catch",
      quantity: 1,
      sku: "XPSG-CATCH-U",
      unit: "each",
      unitPrice: 13.88,
    },
    {
      category: "automation",
      lineTotal: 726.55,
      notes: "Sliding gate motor",
      quantity: 1,
      sku: "XPSG-FILO-400",
      unit: "each",
      unitPrice: 726.55,
    },
    {
      category: "automation",
      lineTotal: 101.92,
      notes: "Motor rack, 4 x 1m sections",
      quantity: 4,
      sku: "XPSG-FILO-RACK",
      unit: "each",
      unitPrice: 25.48,
    },
    {
      category: "sliding_gate_running_gear",
      lineTotal: 38.69,
      notes: "Sliding gate guide",
      quantity: 1,
      sku: "XPSG-GUIDE",
      unit: "each",
      unitPrice: 38.69,
    },
    {
      category: "sliding_gate_running_gear",
      lineTotal: 18.2,
      notes: "Bolt down sliding gate stop",
      quantity: 1,
      sku: "XPSG-STOP",
      unit: "each",
      unitPrice: 18.2,
    },
  ],
  totals: {
    grandTotal: 1703.98,
    gst: 154.91,
    subtotal: 1549.07,
  },
  warnings: [],
}
`;

snapshot[`S16 multi-run QSHS + VS 1`] = `
{
  assumptions: [
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5000-HORIZ-B.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-F-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 3,
        num_slats: 24,
        panel_width_mm: 2000,
        slat_cut_mm: 1985,
      },
    },
    r2: {
      s2: {
        num_panels: 2,
        num_vertical_slats: 23,
        panel_width_mm: 2000,
        rail_cut_mm: 2000,
        slat_cut_mm: 1800,
      },
    },
  },
  lines: [
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 11,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Top/bottom U-channel rails, 2000mm cuts from 5000mm stock",
      quantity: 2,
      sku: "QS-5000-HORIZ-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 2,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "2 vertical side F-sections/panel, 1800mm cuts from 5800mm stock",
      quantity: 2,
      sku: "QS-5800-F-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "6 pieces at 1767mm; QS-SF inserts inside top/bottom rails, 2000mm cuts from 5800mm stock",
      quantity: 4,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 7.1,
      notes: "Screening screws; Vertical slat fixing screws",
      quantity: 5,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 6,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 7.89,
      notes: "138 spacers total",
      quantity: 3,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 7,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 1,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 1985mm cuts from 6100mm stock; 23 vertical slats/panel, 1800mm cuts from 6100mm stock",
      quantity: 40,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 3,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 16.49,
    gst: 1.5,
    subtotal: 14.99,
  },
  warnings: [],
}
`;

snapshot[`S18 COLORBOND fence with kit gate (single swing) 1`] = `
{
  assumptions: [
    "No local price found for SKU CB-1800GS-MN-2PK.",
    "No local price found for SKU CB-CPOST-2400-MN.",
    "No local price found for SKU CB-GATE-R-830-MN.",
    "No local price found for SKU CB-GLINE-1790-MN.",
    "No local price found for SKU CB-HINGE-MN-2PK.",
    "No local price found for SKU CB-LATCH-MN.",
    "No local price found for SKU CB-POSTCAP-DBL.",
    "No local price found for SKU CB-POSTCAP-SGL.",
    "No local price found for SKU CB-RAIL-2365-MN.",
    "No local price found for SKU CB-TS-MN-15PK.",
    "No local price found for SKU GROUT-CONCRETE.",
    "No local price found for SKU XPSG-2700-ST65-MN.",
  ],
  computed: {
    r1: {
      g1: {
        gate_height_mm: 1800,
        gate_leaf_count: 1,
        gate_mode: "kit",
        gate_movement: "single_swing",
        gate_opening_width_mm: 900,
      },
    },
  },
  lines: [
    {
      category: "screening",
      lineTotal: 0,
      notes: "gate stile pack (left + right stile) per leaf × 1 (hangs off run posts — no extra gate posts)",
      quantity: 1,
      sku: "CB-1800GS-MN-2PK",
      unit: "pack",
      unitPrice: 0,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "2 channel posts per bay × 2 bay(s) at 2400mm for 1800mm in_ground",
      quantity: 4,
      sku: "CB-CPOST-2400-MN",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "top + bottom gate rails per leaf × 1",
      quantity: 2,
      sku: "CB-GATE-R-830-MN",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "3 infill sheets per 2365mm bay × 2 bay(s); infill sheet per leaf × 1",
      quantity: 7,
      sku: "CB-GLINE-1790-MN",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 0,
      notes: "Selected hinge hardware (per leaf)",
      quantity: 1,
      sku: "CB-HINGE-MN-2PK",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "gate_hardware",
      lineTotal: 0,
      notes: "Selected latch / lock hardware",
      quantity: 1,
      sku: "CB-LATCH-MN",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "caps_and_plugs",
      lineTotal: 0,
      notes: "double-sided caps for back-to-back channel-post joins",
      quantity: 1,
      sku: "CB-POSTCAP-DBL",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "caps_and_plugs",
      lineTotal: 0,
      notes: "single-sided caps for one-way channel posts at segment ends",
      quantity: 2,
      sku: "CB-POSTCAP-SGL",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "top + bottom rail per bay × 2 bay(s)",
      quantity: 4,
      sku: "CB-RAIL-2365-MN",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 0,
      notes: "tek-screw pack (15) per bay × 2 bay(s); tek-screw pack per leaf × 1",
      quantity: 3,
      sku: "CB-TS-MN-15PK",
      unit: "pack",
      unitPrice: 0,
    },
    {
      category: "fixings",
      lineTotal: 0,
      notes: "1 concrete bag(s) per post footing",
      quantity: 3,
      sku: "GROUT-CONCRETE",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "65×65 steel posts at run ends/corners (free top cap included)",
      quantity: 2,
      sku: "XPSG-2700-ST65-MN",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 0,
    gst: 0,
    subtotal: 0,
  },
  warnings: [
    "GO-Line infill sheets are stocked at the Brisbane & Gold Coast depots only — confirm availability for other regions.",
  ],
}
`;

snapshot[`S17a QSHS baseline tier2 pricing 1`] = `
{
  assumptions: [
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 4,
        num_slats: 24,
        panel_width_mm: 2500,
        slat_cut_mm: 2485,
      },
    },
  },
  lines: [
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 8,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 3,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "8 pieces at 1767mm",
      quantity: 3,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 7.1,
      notes: "Screening screws",
      quantity: 5,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 8,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 9.04,
      notes: "184 spacers total",
      quantity: 4,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.26,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 5,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 2,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 2485mm cuts from 6100mm stock",
      quantity: 48,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 4,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 17.75,
    gst: 1.61,
    subtotal: 16.14,
  },
  warnings: [],
}
`;

snapshot[`S17b QSHS baseline tier3 pricing 1`] = `
{
  assumptions: [
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 4,
        num_slats: 24,
        panel_width_mm: 2500,
        slat_cut_mm: 2485,
      },
    },
  },
  lines: [
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 8,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 3,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "8 pieces at 1767mm",
      quantity: 3,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 7.1,
      notes: "Screening screws",
      quantity: 5,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 8,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 7.8,
      notes: "184 spacers total",
      quantity: 4,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 1.95,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 5,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 2,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 2485mm cuts from 6100mm stock",
      quantity: 48,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 4,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 16.39,
    gst: 1.49,
    subtotal: 14.9,
  },
  warnings: [],
}
`;

snapshot[`O02 stock length override changes slat qty 1`] = `
{
  assumptions: [
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 4,
        num_slats: 24,
        panel_width_mm: 2500,
        slat_cut_mm: 2485,
      },
    },
  },
  lines: [
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 8,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 3,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "8 pieces at 1767mm",
      quantity: 3,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 7.1,
      notes: "Screening screws",
      quantity: 5,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 8,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 10.52,
      notes: "184 spacers total",
      quantity: 4,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 5,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 2,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 2485mm cuts from 3000mm stock",
      quantity: 96,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 4,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 19.38,
    gst: 1.76,
    subtotal: 17.62,
  },
  warnings: [],
}
`;

snapshot[`O03 extraRule extra_component_above_height adds rail 1`] = `
{
  assumptions: [
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-6100-S65-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 3,
        num_slats: 24,
        panel_width_mm: 2000,
        slat_cut_mm: 1985,
      },
    },
  },
  lines: [
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 6,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 2,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "6 pieces at 1767mm",
      quantity: 2,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 5.68,
      notes: "Screening screws",
      quantity: 4,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 6,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 7.89,
      notes: "138 spacers total",
      quantity: 3,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 4,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 1,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "screening",
      lineTotal: 0,
      notes: "24 slats/panel, 1985mm cuts from 6100mm stock",
      quantity: 24,
      sku: "XP-6100-S65-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 3,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 14.93,
    gst: 1.36,
    subtotal: 13.57,
  },
  warnings: [],
}
`;

snapshot[`O04 DB component internal_sku override remaps slat supplier SKU 1`] = `
{
  assumptions: [
    "No local price found for SKU GROUT-RSC.",
    "No local price found for SKU QS-5800-CFC-B.",
    "No local price found for SKU QS-5800-SF-B.",
    "No local price found for SKU QS-SFC-B.",
    "No local price found for SKU XP-2400-FP-B.",
    "No local price found for SKU XP-5800-CSR-B.",
    "No local price found for SKU XP-CSRC-B.",
  ],
  computed: {
    r1: {
      s1: {
        actual_height_mm: 1770,
        num_panels: 3,
        num_slats: 24,
        panel_width_mm: 2000,
        slat_cut_mm: 1985,
      },
    },
  },
  lines: [
    {
      category: "fixings",
      lineTotal: 0,
      notes: "Post-fixing material at 1.5 bags per concreted-in post",
      quantity: 6,
      sku: "GROUT-RSC",
      unit: "bag",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "Auto-added 1:1 with side frame stock",
      quantity: 2,
      sku: "QS-5800-CFC-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "6 pieces at 1767mm",
      quantity: 2,
      sku: "QS-5800-SF-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "fasteners_and_screws",
      lineTotal: 5.68,
      notes: "Screening screws",
      quantity: 4,
      sku: "QS-SCREWS-50PK",
      unit: "pack",
      unitPrice: 1.42,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "Side frame caps",
      quantity: 6,
      sku: "QS-SFC-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "spacers",
      lineTotal: 7.89,
      notes: "138 spacers total",
      quantity: 3,
      sku: "QS-SPACER-09MM-50PK",
      unit: "pack",
      unitPrice: 2.63,
    },
    {
      category: "screening",
      lineTotal: 684,
      notes: "24 slats/panel, 1985mm cuts from 6100mm stock",
      quantity: 24,
      sku: "SUPPLIERB-SLAT-65-B",
      unit: "length",
      unitPrice: 28.5,
    },
    {
      category: "posts_and_mounting",
      lineTotal: 0,
      notes: "50mm posts from run boundaries/corners and internal panel joins",
      quantity: 4,
      sku: "XP-2400-FP-B",
      unit: "each",
      unitPrice: 0,
    },
    {
      category: "frames_and_covers",
      lineTotal: 0,
      notes: "1 CSR/panel at 1764mm",
      quantity: 1,
      sku: "XP-5800-CSR-B",
      unit: "length",
      unitPrice: 0,
    },
    {
      category: "tools_and_consumables",
      lineTotal: 0,
      notes: "CSR caps",
      quantity: 3,
      sku: "XP-CSRC-B",
      unit: "each",
      unitPrice: 0,
    },
  ],
  totals: {
    grandTotal: 767.33,
    gst: 69.76,
    subtotal: 697.57,
  },
  warnings: [],
}
`;
